welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:22: error: unclosed comment
	/*for(k <- 0 to 1){
        ^Diagonal:2: error: Missing closing brace `}' assumed here
override def run() {
^Diagonal:2: error: expected start of definition
override def run() {
         ^Diagonal:3: error: Missing closing brace `}' assumed here
var x:Int=getMondeHauteur()
^Diagonal:4: error: expected class or object definition
	var y:Int=getMondeLargeur
        ^Diagonal:5: error: expected class or object definition
	var c:Int=0
        ^Diagonal:6: error: expected class or object definition
	setPos(0,0)
        ^Diagonal:7: error: expected class or object definition
	ecritMessage(c);c=c+1
        ^Diagonal:7: error: expected class or object definition
	ecritMessage(c);c=c+1
                        ^Diagonal:10: error: expected class or object definition
	for(l<- 0 to 6){
        ^